--- a/03.html
+++ b/03.html
@@ -20,6 +20,14 @@
     <div id="layout">
 
       <!-- COLOQUE O SEU CÓDIGO AQUI DENTRO DESSA DIV -->
+       <div class="layout3">
+        <header>Cabeçalho</header>
+        <nav>Menu</nav>
+        <section class="artigo1">Artigo</section>
+        <section class="artigo2">Artigo</section>
+        <footer>Rodapé</footer>
+       </div>
+
     </div>
   </div>
 </body>
