--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
     </div>
     <div id="layout">
       <!-- COLOQUE O SEU CÓDIGO AQUI DENTRO DESSA DIV -->
+             <header>
+        <h1>Cabeçalho</h1>
+      </header>
+      <main>
+        <section id="artigo">
+          <h2>Artigo</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et erat a dui ultrices volutpat.</p>
+        </section>
+      </main>
+      <footer>
+        <p>Rodapé</p>
+      </footer>
+    </div>
+  </div>
+</body>
+
+</html>
+
     </div>
   </div>
 </body>
