--- a/02.html
+++ b/02.html
@@ -18,27 +18,14 @@
       </ul>
     </div>
     <div id="layout">
-
-      <!-- COLOQUE O SEU CÓDIGO AQUI DENTRO DESSA DIV -->
-  <div class="layout2">
-        <header>Header</header>
-        <nav class="menu">
-          <h2>Menu</h2>
-          <button>Item 1</button>
-          <button>Item 2</button>
-          <button>Item 3</button>
-        </nav>
-        <main class="content">
-          <h2>Content</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aliquam similique nemo, ex reprehenderit debitis qui numquam enim, nulla iure inventore tenetur nesciunt aperiam commodi libero molestiae corrupti? Omnis, adipisci!</p>
-        </main>
-        <aside class="ads">
-          <h2>Ad</h2>
-          <p>Ad</p>
-        </aside>
-        <footer>Footer</footer>
+      <div class="todo">
+        <div class="l1"><p>20vh</p></div>
+        <div class="l2"><p>30vh</p></div>
+        <div class="l3"><p>15vh</p></div>
+        <div class="l4"><p>35vh</p></div>
+        <div class="l5"><p>50vh</p></div>
+        <div class="l6"><p>20vh</p></div>
       </div>
-
     </div>
   </div>
 </body>
